# aoc2016

./: .ocamlformat  algo.ml  algo.mli  day01.ml  day01_input.hex  day02.ml  day02_input.hex  day02_p2.txt  day03.ml  day03_input.hex  day04.ml  day04_input.hex  day05.ml  day05_input.hex  day05_p1.txt  day05_p2.txt  day06.ml  day06_input.hex  day06_p2.txt  day07.ml  day07_input.hex  day08.ml  day08_input.hex  day08_p2.txt  day09.ml  day09_input.hex  day09_p2.txt  day10.ml  day10_input.hex  day11.ml  day11_input.hex  day12.ml  day12_input.hex  day13.ml  day13_input.hex  day14.ml  day14_input.hex  day15.ml  day15_input.hex  day15_p2.txt  (+39 more)
